--- a/styles/modal.css
+++ b/styles/modal.css
@@ -9,6 +9,7 @@
   max-width: 792px;
   background-color: #f2f0f9;
   padding: 32px 106px 28px;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
   margin: 0 auto;
 }
 
