--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,15 @@
 
 @font-face {
   font-family: Inter;
+  src: local("Inter Medium"), local("Inter-Medium"),
+      url("../fonts/Inter-Medium.woff2") format("woff2"),
+      url("../fonts/Inter-Medium.woff") format("woff");
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Inter;
   src: local("Inter Semi Bold"), local("Inter-Semi-Bold"),
       url("../fonts/Inter-SemiBold.woff2") format("woff2"),
       url("../fonts/Inter-SemiBold.woff") format("woff");
@@ -41,7 +50,26 @@ body {
   font-family: Inter, sans-serif;
   font-size: 16px;
   font-weight: 400;
-  color: #6e6893;
+  color: var(--main-color);
+  background-color: var(--white-lilac);
   margin: 0;
+}
+
+.container {
+  max-width: 1160px;
+  padding: 0 30px;
+  margin: 0 auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+  transform: scale(0);
 }
 
