--- a/styles/index.css
+++ b/styles/index.css
@@ -1,2 +1,10 @@
-@import '../styles/style.css';
-@import '../styles/modal.css';
+@import 'style.css';
+@import 'var.css';
+@import 'cms.css';
+@import 'line.css';
+@import 'total-cost.css';
+@import 'modal.css';
+@import 'btn-add-product.css';
+@import 'search-box.css';
+@import 'cms-table.css';
+@import 'modal-error.css';
