--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,6 +1,8 @@
 .overlay {
-  height: 100dvh;
-  padding: 50px 0;
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
   background-color: var(--overlay-background-color);
   display: none;
 }
