--- a/styles/modal.css
+++ b/styles/modal.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   background-color: var(--overlay-background-color);
-  /* display: none; */
+  display: none;
 }
 
 .modal {
@@ -14,7 +14,7 @@
   padding: 32px 106px 39px;
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
   margin: 0 auto;
-  /* display: none; */
+  display: none;
 }
 
 .modal__header {
