--- a/styles/modal.css
+++ b/styles/modal.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   background-color: var(--overlay-background-color);
-  /* display: none; */
+  display: none;
 }
 
 .modal {
