--- a/styles/modal.css
+++ b/styles/modal.css
@@ -4,7 +4,13 @@
   display: flex;
   align-items: center;
   background-color: var(--overlay-background-color);
-  display: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.overlay.is-visible {
+  opacity: 1;
+  visibility: visible;
 }
 
 .modal {
